# rust-discord-bot

./: .gitignore  Cargo.toml  README.md  suppoted.txt
src/: commands.rs  main.rs  rust_repl.rs
src/commands/: eval.rs  get.rs  gpt.rs  help.rs  hukidashi.rs  mod.rs  ping.rs  post.rs  rust_repl_cmd.rs  tex.rs
src/rust_repl/: rust_repl.rs
