[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["full"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
urlencoding = "2.1.3"