[package]
name = "rust-discord-bot"
version = "0.5.4"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["full"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "process", "time"] }
dotenv = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
urlencoding = "2.1.3"
serde_json = "1.0.145"
serde = {version="1.0.228", features = ["derive"]}
tempfile = "3.10"
url = "2.5"
once_cell = "1.19"
chrono = "0.4.42"
